--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
     
     <div id="profile">
         <img 
-        src="./assets/one_pince.png" 
-        alt="foto do perfil one pince sorrindo">
+        src="./assets/perfil.jpg" 
+        alt="foto do perfil no espelho">
 <p>@jeansa12</p>
 
 <div id="switch" onclick="toggleMode()">
