--- a/index.html
+++ b/index.html
@@ -50,6 +50,12 @@
             <ion-icon name="logo-youtube"></ion-icon>
         </a>        
     </li>
+    <li> 
+        <a href="./teste_03/index.html" target="_blank">
+            <span>MARIO JUMP</span>
+            <ion-icon name="game-controller"></ion-icon>
+        </a>        
+    </li>
 </ul>
 
 <style>
